SERVER-12723 geo queries should not be cacheable.